fix karyawan and laporan swagger bug (jsonContent tidak sesuai)
